--- a/social-cards-hover.html
+++ b/social-cards-hover.html
@@ -11,7 +11,7 @@
             type="text/css" />
         <style>
             body {
-                margin: 48px;
+               
                 background: -webkit-linear-gradient(
                     45deg,
                     hsla(265, 53%, 29%, 1) 0%,
@@ -19,9 +19,8 @@
                 );
 
                 filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#432371", endColorstr="#FAAE7B", GradientType=1 );
-                background-repeat: no-repeat;
                 background-position: center;
-                height: 97.8vh;
+                height: auto;
             }
             .card {
                 font-family: "Trebuchet MS", "Lucida Sans Unicode",
